# Homework-1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main  main.c  main.cpp  matmul  run_all.sh  test.cpp  test.sh
data/1/: result.raw
data/3/: result.raw
data/4/: result.raw
data/5/: result.raw
data/6/: result.raw
data/7/: result.raw
data/8/: result.raw
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
src/: main.cpp
